--- a/style.css
+++ b/style.css
@@ -1,10 +1,108 @@
 .app {
-    font-family: 'Roboto', sans-serif;
-    max-width: 1080px; 
-    margin: 100px auto;
-    text-align: center;
+  font-family: "Roboto", sans-serif;
+  max-width: 1080px;
+  margin: 100px auto;
+  text-align: center;
+}
+
+h2 {
+  color: #312e5a;
 }
 
 #mapdiv {
-    margin: 0 auto;
+  margin: 40px auto;
+}
+
+.checkbox-container {
+  display: flex;
+  justify-content: center;
+  font-size: 13px;
+}
+
+.checkbox-container>span {
+  display: flex;
+  margin-right: 25px;
+}
+
+
+/* Styling Checkbox Starts */
+.checkbox-label {
+  display: block;
+  position: relative;
+  margin: auto;
+  cursor: pointer;
+  height: 10px;
+  width: 10px;
+  clear: both;
+  top: -4px;
+  left: -15px;
+}
+
+.checkbox-label input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.checkbox-label .checkbox-custom {
+  position: absolute;
+  top: 2px;
+  left: 8px;
+  height: 10px;
+  width: 10px;
+  background-color: transparent;
+  /* border-radius: 5px; */
+  transition: all 0.3s ease-out;
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -ms-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  border: 2px solid #2BB031;
+}
+
+
+.checkbox-label input:checked~.checkbox-custom {
+  background-color: #2BB031;
+  /* border-radius: 5px; */
+  -webkit-transform: rotate(0deg) scale(1);
+  -ms-transform: rotate(0deg) scale(1);
+  transform: rotate(0deg) scale(1);
+  opacity: 1;
+  border: 2px solid #2BB031;
+}
+
+
+.checkbox-label .checkbox-custom::after {
+  position: absolute;
+  content: "";
+  height: 0px;
+  width: 0px;
+  /* border-radius: 5px; */
+  border: solid #fff;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(0deg) scale(0);
+  -ms-transform: rotate(0deg) scale(0);
+  transform: rotate(0deg) scale(0);
+  opacity: 1;
+  transition: all 0.3s ease-out;
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -ms-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+}
+
+
+.checkbox-label input:checked~.checkbox-custom::after {
+  -webkit-transform: rotate(45deg) scale(1);
+  -ms-transform: rotate(45deg) scale(1);
+  transform: rotate(45deg) scale(1);
+  opacity: 1;
+  left: 2px;
+  top: 0px;
+  width: 3px;
+  height: 7px;
+  border: solid #fff;
+  border-width: 0 2px 2px 0;
+  background-color: transparent;
+  border-radius: 0;
 }
