--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 h2 {
-  color: #312e5a;
+  color: #312E5A;
 }
 
 #mapdiv {
@@ -17,6 +17,7 @@ h2 {
   display: flex;
   justify-content: center;
   font-size: 13px;
+  margin-bottom: 20px;
 }
 
 .checkbox-container>span {
@@ -105,4 +106,51 @@ h2 {
   border-width: 0 2px 2px 0;
   background-color: transparent;
   border-radius: 0;
+}
+
+button {
+  background-color: #2BB031;
+  color: #fff;
+  padding: 10px 20px;
+  text-transform: uppercase;
+  border: none;
+  border-radius: 4px;
+}
+
+.card {
+  margin: 40px auto;
+  height: 220px;
+  width: 80%;
+}
+
+.card-cost {
+  display: flex;
+  justify-content: center;
+  background-color: #F7F8FC;
+  padding: 50px 0;
+}
+
+.card-cost > :first-child {
+  border-right: 1px solid lightgray;
+}
+
+.card-cost > div {
+  padding:  0 40px;
+}
+
+.sub-text {
+  color: #312E5A;
+  margin-bottom: 10px;
+}
+
+.main-text {
+  color: #312E5A;
+  font-size: 24px;
+  font-weight: 650;
+  margin-bottom: 5px;
+}
+
+.small-text {
+  color: #312E5A;
+  font-size: 12px;
 }
