--- a/style.css
+++ b/style.css
@@ -150,6 +150,13 @@ button {
   text-transform: uppercase;
   border: none;
   border-radius: 4px;
+  outline: 0;
+}
+
+button:active,
+button:hover,
+button:focus {
+  outline: 0;
 }
 
 .card {
