--- a/style.css
+++ b/style.css
@@ -151,12 +151,17 @@ button {
   border: none;
   border-radius: 4px;
   outline: 0;
+  transition: box-shadow 0.3s ease-in-out;
 }
 
 button:active,
 button:hover,
 button:focus {
   outline: 0;
+}
+
+button:hover {
+  box-shadow: 0 5px 15px 2px rgba(51, 51, 51, 0.1);
 }
 
 .card {
