--- a/style.css
+++ b/style.css
@@ -260,12 +260,15 @@ button:disabled {
   font-size: 14px;
 }
 
-.slider.slider-horizontal .slider-tick-container div:nth-of-type() {
-  left: 8%;
+/* .slider.slider-horizontal .slider-tick-container div:nth-of-type(1) {
+  left: 10% !important
 }
-
-.slider.slider-horizontal .slider-tick-container:nth-child(2) {}
-
-.slider.slider-horizontal .slider-tick-container:nth-child(3) {}
-
-.slider.slider-horizontal .slider-tick-container:nth-child(4) {}
+.slider.slider-horizontal .slider-tick-container div:nth-of-type(2) {
+  left: 35% !important
+}
+.slider.slider-horizontal .slider-tick-container div:nth-of-type(3) {
+  left: 63% !important
+}
+.slider.slider-horizontal .slider-tick-container div:nth-of-type(4) {
+  left: 90% !important
+} */
