[Update] Git link added

--- a/style.css
+++ b/style.css
@@ -5,6 +5,21 @@
   text-align: center;
 }
 
+.git-link {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+
+.icon-git {
+  width: 60px;
+  transition: all .3s ease-in-out;
+}
+
+.icon-git:hover {
+  transform: rotate(360deg) scale(1.2);
+}
+
 .form-control::-webkit-input-placeholder {
   color: lightgray;
 }
