--- a/style.css
+++ b/style.css
@@ -132,6 +132,7 @@ button {
   border: none;
   border-radius: 4px;
   outline: 0;
+  box-shadow: 0 5px 15px 2px rgba(51, 51, 51, 0.1);
   transition: box-shadow 0.3s ease-in-out;
 }
 
@@ -142,7 +143,7 @@ button:focus {
 }
 
 button:hover {
-  box-shadow: 0 5px 15px 2px rgba(51, 51, 51, 0.1);
+  box-shadow: none
 }
 
 button:disabled {
